@@ -2,7 +2,9 @@
 
 Migrationsdir = @DATADIR@/ebox-samba/migration
 
-nobase_Migrations_SCRIPTS = 0001_add_samba_service.pl 0002_delete_home_drives.pl
+nobase_Migrations_SCRIPTS = 0001_add_samba_service.pl \
+    0002_delete_home_drives.pl \
+    0003_add_quota_ldap.pl
 
 EXTRA_DIST = $(nobase_Migrations_SCRIPTS)
 
