@@ -3,7 +3,7 @@
 moduledir   = @DATADIR@/ebox/modules
 module_DATA = samba.yaml
 
-pkgdata_DATA = ebox.ldif samba.ldif
+pkgdata_DATA = ebox.ldif samba.ldif quota.ldif
 
 
 EXTRA_DIST = $(module_DATA) $(pkgdata_DATA)
