@@ -1,0 +1,8 @@
+dn: cn=quota,cn=schema,cn=config
+objectClass: olcSchemaConfig
+cn: quota
+olcAttributeTypes: ( 1.3.6.1.4.1.19937.1.1.1 NAME 'quota' DESC 'Quotas (Fil
+ eSystem:BlocksSoft,BlocksHard,InodesSoft,InodesHard)' EQUALITY caseIgnoreIA5M
+ atch SYNTAX 1.3.6.1.4.1.1466.115.121.1.26 )
+olcObjectClasses: ( 1.3.6.1.4.1.19937.1.2.1 NAME 'systemQuotas' DESC 'Syste
+ m Quotas' SUP posixAccount AUXILIARY MUST uid MAY quota )
