@@ -22,7 +22,7 @@ use base qw(EBox::Module::Service EBox::LdapModule EBox::FirewallObserver
             EBox::Report::DiskUsageProvider EBox::Model::CompositeProvider
             EBox::Model::ModelProvider EBox::LogObserver);
 
-use EBox::Sudo qw( :all );
+use EBox::Sudo;
 use EBox::Global;
 use EBox::Service;
 use EBox::SambaLdapUser;
@@ -65,7 +65,6 @@ use constant SMBPORTS => qw(137 138 139 445);
 
 
 use constant FIX_SID_PROGRAM => '/usr/share/ebox-samba/ebox-fix-sid';
-use constant QUOTA_PROGRAM => '/usr/share/ebox-samba/ebox-samba-quota';
 
 sub _create
 {
@@ -180,7 +179,7 @@ sub enableActions
 
     my $users = EBox::Global->modInstance('users');
 
-    root(EBox::Config::share() . '/ebox-samba/ebox-samba-enable');
+    EBox::Sudo::root(EBox::Config::share() . '/ebox-samba/ebox-samba-enable');
 }
 
 # Method: modelClasses
@@ -532,7 +531,7 @@ sub _setConf
 
     $self->writeConfFile(CLAMAVSMBCONFFILE, "samba/vscan-clamav.conf.mas", \@array);
 
-    root(EBox::Config::share() . '/ebox-samba/ebox-setadmin-pass');
+    EBox::Sudo::root(EBox::Config::share() . '/ebox-samba/ebox-setadmin-pass');
 
     my $users = EBox::Global->modInstance('users');
 
@@ -988,14 +987,6 @@ sub _checkDescriptionName # (name)
     return 1;
 }
 
-sub _checkQuota # (quota)
-{
-    my ($quota) = @_;
-
-    ($quota =~ /\D/) and return undef;
-    return 1;
-}
-
 sub _addPrinter
 {
     my ($self, $name) = @_;
@@ -1311,64 +1302,6 @@ sub _sambaPrinterConf
 sub enableQuota
 {
     return (EBox::Config::configkey('enable_quota') eq 'yes');
-}
-
-# Method: currentUserQuota
-#
-#	Fetch the current set quota for a given user
-#
-# Parameters:
-#
-#	user - string
-#
-# Returns:
-#
-#	Integer - quota in MB. 0 means no quota
-#
-sub currentUserQuota
-{
-    my ($self, $user) = @_;
-
-    my $usermod = EBox::Global->modInstance('users');
-    unless (defined($user) and $usermod->uidExists($user)) {
-        throw EBox::Exceptions::External("user is not valid");
-    }
-    my @quotaValues = @{root(QUOTA_PROGRAM . " -q $user ")};
-
-    return $quotaValues[0];
-}
-
-# Method: setUserQuota
-#
-#	Set user quota
-#
-# Parameters:
-#
-#	Quota - Integer. Quota in MB. 0 no quota.
-#
-# Returns:
-#
-#	Integer - quota in MB. 0 means no quota
-#
-sub setUserQuota
-{
-    my ($self, $user, $userQuota) = @_;
-
-    return unless ($self->enableQuota());
-
-    my $usermod = EBox::Global->modInstance('users');
-    unless (defined($user) and $usermod->uidExists($user)) {
-        throw EBox::Exceptions::External("user is not valid");
-    }
-
-    unless (_checkQuota($userQuota)) {
-        throw EBox::Exceptions::InvalidData
-            ('data' => __('quota'), 'value' => $userQuota);
-    }
-
-    my $quota = $userQuota * 1024;
-
-    root(QUOTA_PROGRAM . " -s $user $quota");
 }
 
 sub dumpConfig
